test/functions/operatorOverloads/errors/namedOperator.chpl
operator foo() {
  writeln("In operator foo()");
}

foo();
