test/functions/operatorOverloads/errors/namedOperator.good
namedOperator.chpl:1:error: 'foo' is not a legal operator name
